--- a/css/creative2.css
+++ b/css/creative2.css
@@ -9645,13 +9645,13 @@ hr.light {
     color: #212529;
   }
   #mainNav.navbar-scrolled .navbar-brand:hover {
-    color: #dc3545; 
+    color: #fff; 
   }
   #mainNav.navbar-scrolled .navbar-nav .nav-item .nav-link {
     color: #212529;
   }
   #mainNav.navbar-scrolled .navbar-nav .nav-item .nav-link:hover {
-    color: #dc3545;
+    color: #fff;
   }
 }
 
