--- a/css/creative2.css
+++ b/css/creative2.css
@@ -9627,8 +9627,8 @@ hr.light {
   #mainNav .navbar-brand:hover {
     color: #fff;
   }
-  #mainNav .navbar-nav .nav-item .nav-link {
-    color: rgba(255, 255, 255, 0.7);
+  #mainNav .navbar-nav .nav-item .nav-link { /*no scroll color changes*/
+    color: #212529;
     padding: 0 1rem;
   }
   #mainNav .navbar-nav .nav-item .nav-link:hover {
@@ -9644,13 +9644,13 @@ hr.light {
   #mainNav.navbar-scrolled .navbar-brand {
     color: #212529;
   }
-  #mainNav.navbar-scrolled .navbar-brand:hover {
+  #mainNav.navbar-scrolled .navbar-brand:hover {/*hover color changes*/
     color: #fff; 
   }
   #mainNav.navbar-scrolled .navbar-nav .nav-item .nav-link {
     color: #212529;
   }
-  #mainNav.navbar-scrolled .navbar-nav .nav-item .nav-link:hover {
+  #mainNav.navbar-scrolled .navbar-nav .nav-item .nav-link:hover {/*hover color changes*/
     color: #fff;
   }
 }
